v0.7: Finished course API and fixed user, group API
