# application/models/model_user.php
@@ -3,39 +3,12 @@
 class Model_User extends Model {
 
 	/*
-	 * Authorisation for API users
-	 */
-	/**
-	 * @throws exception
-	 */
-	public function auth() {
-		if (array_key_exists('HTTP_APIKEY', $_SERVER)) {
-			$mysqli = Session::get_sql_connection();
-			$stmt= $mysqli->prepare('SELECT COUNT(*) FROM apikey WHERE apikey = ?');
-			$stmt->bind_param('s', $_SERVER['HTTP_APIKEY']);
-			if (!$stmt->execute()) {
-				throw new Exception(500);
-			}
-			$right_key = $stmt->get_result()->fetch_assoc()['COUNT(*)'];
-			if ($right_key)
-				return;
-			throw new Exception(403);
-		}
-		throw new Exception(401);
-	}
-
-	/*
 	 * Find all users
 	 */
 	/**
 	 * @throws Exception
 	 */
 	public function get_user(): array {
-		$request_string = file_get_contents('php://input');
-		$request = (array) json_decode($request_string);
-		if (!empty($request_string) || !empty($request)) {
-			throw new Exception(400);
-		}
 		$mysqli = Session::get_sql_connection();
 		$users = $mysqli->query('SELECT * FROM `user`');
 		$response = array();
@@ -55,11 +28,6 @@ class Model_User extends Model {
 	 * @throws Exception
 	 */
 	public function get_user_index($index): array {
-		$request_string = file_get_contents('php://input');
-		$request = (array) json_decode($request_string);
-		if (!empty($request_string) || !empty($request)) {
-			throw new Exception(400);
-		}
 		$mysqli = Session::get_sql_connection();
 		$stmt = $mysqli->prepare('SELECT * FROM `user` WHERE userid = ?');
 		$stmt->bind_param('i', $index);
@@ -75,60 +43,9 @@ class Model_User extends Model {
 	}
 
 	/*
-	 * Find all users (only one attribute in $action)
-	 */
-	/**
-	 * @throws Exception
-	 */
-	public function get_user_action($action): array {
-		$request_string = file_get_contents('php://input');
-		$request = (array) json_decode($request_string);
-		if (!empty($request_string) || !empty($request)) {
-			throw new Exception(400);
-		}
-		$mysqli = Session::get_sql_connection();
-		$users = $mysqli->query('SELECT `' . $action . '` FROM `user`');
-		$response = array();
-		while ($user = $users->fetch_assoc()) {
-			$response[] = $user;
-		}
-		return array(
-			'success' => 'true',
-			'data' => $response
-		);
-	}
-
-	/*
-	 * Find user by userid (only one attribute in $action)
-	 */
-	/**
-	 * @throws Exception
-	 */
-	public function get_user_index_action($index, $action): array {
-		$request_string = file_get_contents('php://input');
-		$request = (array) json_decode($request_string);
-		if (!empty($request_string) || !empty($request)) {
-			throw new Exception(400);
-		}
-		$mysqli = Session::get_sql_connection();
-		$stmt = $mysqli->prepare('SELECT `' . $action . '` FROM `user` WHERE userid = ?');
-		$stmt->bind_param('i', $index);
-		if (!$stmt->execute()) {
-			throw new Exception(500);
-		}
-		$users = $stmt->get_result();
-		$response = $users->fetch_assoc();
-		return array(
-			'success' => 'true',
-			'data' => $response
-		);
-	}
-
-	/*
 	 * Checking if json is user
 	 * Field all_attributes is boolean
-	 * If all_attributes is true, json must have all user attributes
-	 * Else some attributes may be skipped
+	 * If all_attributes is true, json must have all user attributes, else some attributes may be skipped
 	 */
 	/**
 	 * @throws exception
