# static/openapi.yaml
@@ -11,8 +11,6 @@ tags:
     description: Work with users
   - name: group
     description: Work with group of students
-  - name: role
-    description: Work with role of users
 paths:
   /user:
     get:
@@ -257,114 +255,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/500'
-  /user/{action}:
-    get:
-      tags:
-        - user
-      summary: Find action of all users (name, groupid or role)
-      operationId: get_user_action
-      parameters:
-        - name: action
-          in: path
-          description: Action of user (name, groupid or role)
-          required: true
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  success:
-                    type: boolean
-                    example: true
-                  data: 
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/user_name'
-        '400':
-          description: Wrong request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/400'
-        '401':
-          description: No authorisation key
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/401'
-        '403':
-          description: Wrong authorisation key
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/403'
-        '500':
-          description: Server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/500'
-  /user/{userid}/{action}:
-    get:
-      tags:
-        - user
-      summary: Find all user actions (name, groupid or role)
-      operationId: get_user_index_action
-      parameters:
-        - name: userid
-          in: path
-          description: Id of user
-          required: true
-          schema:
-            type: integer
-        - name: action
-          in: path
-          description: Action of user (name, groupid or role)
-          required: true
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  success:
-                    type: boolean
-                    example: true
-                  data: 
-                    $ref: '#/components/schemas/user_name'
-        '400':
-          description: Wrong request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/400'
-        '401':
-          description: No authorisation key
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/401'
-        '403':
-          description: Wrong authorisation key
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/403'
-        '500':
-          description: Server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/500'
   /group:
     get:
       tags:
@@ -584,114 +474,6 @@ paths:
                   success:
                     type: boolean
                     example: true
-        '400':
-          description: Wrong request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/400'
-        '401':
-          description: No authorisation key
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/401'
-        '403':
-          description: Wrong authorisation key
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/403'
-        '500':
-          description: Server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/500'
-  /group/{action}:
-    get:
-      tags:
-        - group
-      summary: Find all actions of group (name)
-      operationId: get_group_action
-      parameters:
-        - name: action
-          in: path
-          description: Action of group (name)
-          required: true
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  success:
-                    type: boolean
-                    example: true
-                  data: 
-                    type: array
-                    items:
-                      $ref: '#/components/schemas/group_without_id'
-        '400':
-          description: Wrong request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/400'
-        '401':
-          description: No authorisation key
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/401'
-        '403':
-          description: Wrong authorisation key
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/403'
-        '500':
-          description: Server error
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/500'
-  /group/{groupid}/{action}:
-    get:
-      tags:
-        - group
-      summary: Find all actions of group (name)
-      operationId: get_group_index_action
-      parameters:
-        - name: groupid
-          in: path
-          description: Id of group
-          required: true
-          schema:
-            type: integer
-        - name: action
-          in: path
-          description: Action of group (name)
-          required: true
-          schema:
-            type: integer
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  success:
-                    type: boolean
-                    example: true
-                  data: 
-                    $ref: '#/components/schemas/group_without_id'
         '400':
           description: Wrong request
           content:
